added classes for the createBet, CreateAccount, and FindFriends

--- a/app/src/main/res/layout/create_bet.xml
+++ b/app/src/main/res/layout/create_bet.xml
@@ -39,6 +39,7 @@
         </LinearLayout>
        <Button
                android:layout_width="wrap_content"
+               android:id="@+id/selectDateButton"
                android:layout_gravity="center"
                android:text="Select End Date"
                android:layout_height="wrap_content"/>
