--- a/app/src/main/res/layout/find_friends.xml
+++ b/app/src/main/res/layout/find_friends.xml
@@ -27,5 +27,16 @@
 
     </LinearLayout>
 
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="bottom"
+            android:layout_height="match_parent">
+        <Button
+                android:layout_width="wrap_content"
+                android:id="@+id/tempButton"
+                android:text="Temp button"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
