--- a/app/src/main/res/layout/main_recyclerview_listitem.xml
+++ b/app/src/main/res/layout/main_recyclerview_listitem.xml
@@ -19,6 +19,7 @@
                   android:layout_height="match_parent">
 
         <TextView
+                android:id="@+id/item_textview_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="USER NAME bet USER NAME 2: "
@@ -27,6 +28,7 @@
         />
 
         <TextView
+                android:id="@+id/item_textview_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="BET TEXT HERE"
@@ -35,6 +37,7 @@
         />
 
         <TextView
+                android:id="@+id/item_textview_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$400.00"
