--- a/app/src/main/res/layout/find_friends.xml
+++ b/app/src/main/res/layout/find_friends.xml
@@ -8,21 +8,11 @@
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent">
-        <searchable xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:label="search label"
-                    android:voiceSearchMode="showVoiceSearchButton|launchRecognizer"
-                    android:searchSuggestAuthority="ngvl.android.demosearch.citysuggestion"
-                    android:searchSuggestIntentAction="android.intent.action.VIEW"
-                    android:searchSuggestIntentData="content://ngvl.android.demosearch.citysuggestion"
-                    android:hint="search_hint" >
-        </searchable>
 
         <android.support.v7.widget.RecyclerView
+                android:id="@+id/friend_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-        >
-
-
+                android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
