--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -9,7 +9,9 @@
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:gravity="center"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_margin="50sp"
+    >
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -18,9 +20,10 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="UserName"/>
+                    android:text="Email"/>
 
             <EditText
+                    android:id="@+id/email_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -36,8 +39,11 @@
                     android:text="Password"/>
 
             <EditText
+                    android:id="@+id/pass_edit"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+            />
 
         </LinearLayout>
 
@@ -51,15 +57,21 @@
                     android:text="Confirm Password"/>
 
             <EditText
+                    android:id="@+id/confirmpass_edit"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+            />
 
         </LinearLayout>
 
         <Button
+                android:id="@+id/create_button"
                 android:layout_width="wrap_content"
                 android:text="Create Account"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+        />
 
 
 
