--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -25,7 +25,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
-            android:layout_marginVertical="35dp"/>
+            android:layout_marginVertical="35dp"
+            android:inputType="textPassword"
+    />
 
     <Button
             android:id="@+id/login_button"
