--- a/app/src/main/res/layout/create_bet.xml
+++ b/app/src/main/res/layout/create_bet.xml
@@ -4,11 +4,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_friends"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Create a Bet"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textColor="#000"/>
+
+    </android.support.v7.widget.Toolbar>
+
     <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:gravity="center_vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_margin="30dp">
 
         <LinearLayout
                 android:layout_width="match_parent"
