--- a/app/src/main/res/layout/bet_page_recyclerview_listitem.xml
+++ b/app/src/main/res/layout/bet_page_recyclerview_listitem.xml
@@ -14,14 +14,15 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/item_imagevie"
+            android:layout_margin="20dp"
             />
         <TextView
             android:id="@+id/item_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TITLE OF BET"
-            android:textSize="24sp"
-            android:layout_gravity="center_vertical"
+            android:textSize="20sp"
+            android:layout_gravity="center"
             android:textColor="#000"
             />
     </LinearLayout>
@@ -29,7 +30,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+    >
 
         <Button
             android:layout_width="wrap_content"
