--- a/app/src/main/res/layout/create_bet.xml
+++ b/app/src/main/res/layout/create_bet.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -38,29 +39,44 @@
                     android:layout_height="wrap_content"/>
             <EditText
                     android:layout_width="match_parent"
+                    android:hint="Insert a description for your bet"
                     android:layout_height="wrap_content"/>
 
         </LinearLayout>
         <LinearLayout
                 android:layout_width="match_parent"
+                android:orientation="vertical"
                 android:layout_height="wrap_content">
-            <ImageButton
-                    android:layout_width="35dp"
-                    android:paddingLeft="10dp"
-                    android:background="@drawable/ic_add_circle_outline_black_24dp"
-                    android:layout_height="35dp"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:text="Amount"
+                    android:layout_height="wrap_content"/>
             <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
 
         </LinearLayout>
-       <Button
-               android:layout_width="wrap_content"
-               android:id="@+id/selectDateButton"
-               android:layout_gravity="center"
-               android:text="Select End Date"
-               android:layout_height="wrap_content"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:text="End Date"
+                    android:layout_height="wrap_content"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:hint="dd/MM/yyyy hh:mm:ss"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Create Bet"
+        />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
