--- a/app/src/main/res/layout/create_bet.xml
+++ b/app/src/main/res/layout/create_bet.xml
@@ -39,6 +39,7 @@
                     android:layout_height="wrap_content"/>
             <EditText
                     android:layout_width="match_parent"
+                    android:id="@+id/TitleText"
                     android:hint="Insert a description for your bet"
                     android:layout_height="wrap_content"/>
 
@@ -53,6 +54,7 @@
                     android:layout_height="wrap_content"/>
             <EditText
                     android:layout_width="match_parent"
+                    android:id="@+id/amountText"
                     android:layout_height="wrap_content"/>
 
 
@@ -67,6 +69,7 @@
                     android:layout_height="wrap_content"/>
             <EditText
                     android:layout_width="match_parent"
+                    android:id="@+id/dateText"
                     android:hint="dd/MM/yyyy hh:mm:ss"
                     android:layout_height="wrap_content"/>
 
@@ -74,6 +77,7 @@
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/createBetButton"
                 android:layout_gravity="center"
                 android:text="Create Bet"
         />
