--- a/app/src/main/res/layout/friend_recyclerview.xml
+++ b/app/src/main/res/layout/friend_recyclerview.xml
@@ -8,7 +8,7 @@
     <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:id="@+id/item_imageview"
+            android:id="@+id/item_imageviewFriend"
             android:src="@mipmap/ic_launcher"
             android:layout_margin="15dp"
     />
