--- a/app/src/main/res/layout/create_bet.xml
+++ b/app/src/main/res/layout/create_bet.xml
@@ -65,12 +65,11 @@
                 android:layout_height="wrap_content">
             <TextView
                     android:layout_width="match_parent"
-                    android:text="End Date"
+                    android:text="How many days do you want the bet to last?"
                     android:layout_height="wrap_content"/>
             <EditText
                     android:layout_width="match_parent"
                     android:id="@+id/dateText"
-                    android:hint="dd/MM/yyyy hh:mm:ss"
                     android:layout_height="wrap_content"/>
 
         </LinearLayout>
