--- a/app/src/main/res/layout/bet_page_recyclerview_listitem.xml
+++ b/app/src/main/res/layout/bet_page_recyclerview_listitem.xml
@@ -25,6 +25,14 @@
             android:layout_gravity="center"
             android:textColor="#000"
             />
+
+        <TextView
+                android:id="@+id/temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="nada"
+                android:visibility="invisible"
+        />
     </LinearLayout>
 
     <LinearLayout
