--- a/app/src/main/res/menu/sidebar_menu.xml
+++ b/app/src/main/res/menu/sidebar_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <item
-            android:id="@+id/sidebar_win_loss"
-            android:title="@string/win_loss"/>
+            android:id="@+id/sidebar_account"
+            android:title="@string/account" />
     <item
             android:id="@+id/sidebar_make_bet"
             android:title="@string/make_bet" />
     <item
-            android:id="@+id/sidebar_account"
-            android:title="@string/account" />
+            android:id="@+id/sidebar_add_friend"
+            android:title="Add a Friend" />
+
 </menu>
