--- a/app/src/main/res/layout/ongoing_bet_display_page.xml
+++ b/app/src/main/res/layout/ongoing_bet_display_page.xml
@@ -22,6 +22,7 @@
     </android.support.v7.widget.Toolbar>
 
     <TextView
+            android:id="@+id/title_witle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TITLE OF BET"
@@ -40,20 +41,6 @@
             android:orientation="vertical"
             android:layout_marginVertical="20dp">
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="OUTCOME:"
-                android:textColor="#000"
-        />
-
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="I BET YOU STARTED THIS PROJECT LAST NIGHT"
-                android:textColor="#000"
-        />
-
     </LinearLayout>
 
     <LinearLayout
@@ -63,16 +50,16 @@
             android:layout_marginVertical="20dp">
 
         <TextView
+                android:id="@+id/bet_amount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="POT:"/>
 
         <TextView
+                android:id="@+id/participants"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="$500"
-                android:textColor="#000"
-        />
+                android:text="POT:"/>
 
     </LinearLayout>
 
